[gd_scene load_steps=11 format=2]

[ext_resource path="res://Interactables/DestructibleFrontGate.gd" type="Script" id=1]
[ext_resource path="res://Interactables/Models/CasteFrontGateDamaged.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interactables/Models/CastleFrontGate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interactables/Models/CastleFrontGateBroken.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Audio/gate_shatter.ogg" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2.05368, 4.27664, 0.234457 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.50806, 5.00771, 1.63088 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.105882, 0.168627, 0.254902, 1 )
metallic_specular = 0.0

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.15, 2, 1 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="DestructibleFrontGate" type="Area"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape_intact" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0703206, 4.21253, 0 )
shape = SubResource( 1 )

[node name="CollisionShape_broken" type="CollisionPolygon" parent="StaticBody"]
depth = 0.25
disabled = true
polygon = PoolVector2Array( -1.74271, 0.210263, -1.8025, 6.28535, 0.0391598, 7.85195, 1.80907, 6.28535, 1.96453, 0.0308809, 0.498987, 0.0539148, 0.513001, 1.29462, 0.628783, 2.11628, 0.448493, 2.93878, -0.361608, 2.56729, -0.489473, 1.74781, -0.389352, 1.12213, 0.145057, -0.0217986 )

[node name="InteractableCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85647, 0.275907 )
shape = SubResource( 2 )

[node name="DesctructionParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0539163, 2.22866, 0.434713 )
material_override = SubResource( 3 )
emitting = false
amount = 24
lifetime = 0.8
one_shot = true
explosiveness = 0.5
mesh = SubResource( 4 )
flag_disable_z = true
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 0, -20, 0 )
initial_velocity = 10.0
angular_velocity = 650.77
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
orbit_velocity_curve = null
linear_accel = 0.33
angle = 720.0
angle_random = 1.0
scale_amount_curve = SubResource( 5 )

[node name="CastleFrontGate" parent="." instance=ExtResource( 3 )]

[node name="CastleFrontGateDamaged" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CastleFrontGateBroken" parent="." instance=ExtResource( 4 )]
visible = false

[node name="DestructionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "AmbientSounds"
[connection signal="area_entered" from="." to="." method="_on_DestructibleFrontGate_area_entered"]
